--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -385,7 +385,7 @@ jobs:
             CONFIG_FILE="wrangler.${worker}.toml"
             if [ -f "$CONFIG_FILE" ]; then
               echo "Deploying ${worker} to production..."
-              if wrangler deploy --config "$CONFIG_FILE" --message "Deploy ${CURRENT_SHA}" 2>&1; then
+              if wrangler deploy --config "$CONFIG_FILE" 2>&1; then
                 echo "✅ Successfully deployed ${worker} to production"
               else
                 echo "❌ Failed to deploy ${worker} to production"
@@ -468,7 +468,7 @@ jobs:
               
               if [ -n "$DEPLOYMENT_ID" ]; then
                 echo "Rolling back ${worker} to deployment ${DEPLOYMENT_ID}..."
-                if wrangler rollback --config "$CONFIG_FILE" --message "Emergency rollback after failed production deployment" 2>&1; then
+                if wrangler rollback --config "$CONFIG_FILE" 2>&1; then
                   echo "✅ Successfully rolled back ${worker}"
                 else
                   echo "❌ Failed to rollback ${worker}"
