fix: added nodejs compat to wrangler files

--- a/wrangler.catalogworker.toml
+++ b/wrangler.catalogworker.toml
@@ -1,7 +1,7 @@
 name = "catalog-worker"
 main = "catalogworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "catalog_db"
