--- a/wrangler.authworker.toml
+++ b/wrangler.authworker.toml
@@ -1,7 +1,7 @@
 name = "auth-worker"
 main = "authworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "auth_db"
