--- a/wrangler.cartworker.toml
+++ b/wrangler.cartworker.toml
@@ -1,7 +1,7 @@
 name = "cart-worker"
 main = "cartworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "cart_db"
