--- a/wrangler.fulfillmentworker.toml
+++ b/wrangler.fulfillmentworker.toml
@@ -1,7 +1,7 @@
 name = "fulfillment-worker"
 main = "fulfillmentworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "fulfillment_db"
