--- a/wrangler.healthcheckworker.toml
+++ b/wrangler.healthcheckworker.toml
@@ -1,7 +1,7 @@
 name = "health-check-worker"
 main = "healthcheckworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "auth_db"
