--- a/wrangler.logworker.toml
+++ b/wrangler.logworker.toml
@@ -1,7 +1,7 @@
 name = "log-worker"
 main = "logworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[r2_buckets]]
 binding = "log_bucket"
