--- a/wrangler.ordersworker.toml
+++ b/wrangler.ordersworker.toml
@@ -1,7 +1,7 @@
 name = "orders-worker"
 main = "ordersworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "orders_db"
