--- a/wrangler.paymentworker.toml
+++ b/wrangler.paymentworker.toml
@@ -1,7 +1,7 @@
 name = "payment-worker"
 main = "paymentworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "payment_db"
