--- a/wrangler.pricingworker.toml
+++ b/wrangler.pricingworker.toml
@@ -1,7 +1,7 @@
 name = "pricing-worker"
 main = "pricingworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "pricing_db"
