--- a/wrangler.ratingworker.toml
+++ b/wrangler.ratingworker.toml
@@ -1,7 +1,7 @@
 name = "rating-worker"
 main = "ratingworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[d1_databases]]
 binding = "rating_db"
