--- a/wrangler.realtimeworker.toml
+++ b/wrangler.realtimeworker.toml
@@ -1,7 +1,7 @@
 name = "realtime-worker"
 main = "realtimeworker/index.js"
 compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
+node_compat = true
 
 [[migrations]]
 tag = "v1"
