fix: node js compat

--- a/wrangler.ordersworker.toml
+++ b/wrangler.ordersworker.toml
@@ -2,6 +2,7 @@ name = "orders-worker"
 main = "ordersworker/index.js"
 compatibility_date = "2024-09-23"
 node_compat = true
+compatibility_flags = ["nodejs_compat"]
 
 [[d1_databases]]
 binding = "orders_db"
