--- a/wrangler.fulfillmentworker.toml
+++ b/wrangler.fulfillmentworker.toml
@@ -2,6 +2,7 @@ name = "fulfillment-worker"
 main = "fulfillmentworker/index.js"
 compatibility_date = "2024-09-23"
 node_compat = true
+compatibility_flags = ["nodejs_compat"]
 
 [[d1_databases]]
 binding = "fulfillment_db"
