--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -53,7 +53,14 @@ jobs:
 
       - name: Detect changed workers
         id: detect
+        env:
+          GITHUB_EVENT_BEFORE: ${{ github.event.before }}
+          GITHUB_EVENT_AFTER: ${{ github.event.after }}
+          GITHUB_SHA: ${{ github.sha }}
         run: |
+          echo "GitHub event before: $GITHUB_EVENT_BEFORE"
+          echo "GitHub event after: $GITHUB_EVENT_AFTER"
+          echo "GitHub SHA: $GITHUB_SHA"
           WORKERS=$(node scripts/detect-changed-workers.js)
           echo "workers=$WORKERS" >> $GITHUB_OUTPUT
           echo "Changed workers: $WORKERS"
