fix: preview prod env worker change should be detected now

--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -62,7 +62,9 @@ jobs:
           echo "GitHub event after: $GITHUB_EVENT_AFTER"
           echo "GitHub SHA: $GITHUB_SHA"
           WORKERS=$(node scripts/detect-changed-workers.js)
-          echo "workers=$WORKERS" >> $GITHUB_OUTPUT
+          echo "workers<<EOF" >> $GITHUB_OUTPUT
+          echo "$WORKERS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
           echo "Changed workers: $WORKERS"
 
   deploy-production:
