--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -55,20 +55,25 @@ jobs:
         env:
           GITHUB_BASE_REF: ${{ github.base_ref }}
         run: |
-          WORKERS=$(node scripts/detect-changed-workers.js)
-          echo "workers<<EOF" >> $GITHUB_OUTPUT
-          echo "$WORKERS" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          # Capture only stdout (JSON), stderr goes to logs automatically
+          WORKERS=$(node scripts/detect-changed-workers.js 2>/dev/null || echo '[]')
+          # Trim whitespace and ensure we have valid JSON
+          WORKERS=$(echo "$WORKERS" | xargs)
+          if [ -z "$WORKERS" ] || ! echo "$WORKERS" | grep -qE '^\['; then
+            WORKERS='[]'
+          fi
+          # Set output (ensure no extra whitespace)
+          echo "workers=$WORKERS" >> $GITHUB_OUTPUT
           echo "Changed workers: $WORKERS"
 
   deploy-preview:
     name: Deploy to Preview
     runs-on: ubuntu-latest
     needs: detect-changed-workers
-    if: needs.detect-changed-workers.outputs.workers != '[]'
+    if: needs.detect-changed-workers.outputs.workers != '[]' && needs.detect-changed-workers.outputs.workers != ''
     strategy:
       matrix:
-        worker: ${{ fromJson(needs.detect-changed-workers.outputs.workers) }}
+        worker: ${{ fromJson(needs.detect-changed-workers.outputs.workers || '[]') }}
     env:
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
       CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
