feat: added slack integration

--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -6,6 +6,21 @@ on:
       - main
 
 jobs:
+  notify-start:
+    name: Notify Deployment Start
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send Slack notification
+        if: always()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          if [ -n "$SLACK_WEBHOOK_URL" ]; then
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\":\"🚀 *Production Deployment Started*\n\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Author:* ${{ github.actor }}\n*Workflow:* ${{ github.workflow }}\n*Run:* ${{ github.run_number }}\n\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow>\"}" \
+              "$SLACK_WEBHOOK_URL" || true
+          fi
+
   lint-and-test:
     name: Lint and Test
     runs-on: ubuntu-latest
@@ -128,4 +143,52 @@ jobs:
           echo "❌ Health check failed for ${{ matrix.worker }}, rolling back..."
           node scripts/rollback-worker.js ${{ matrix.worker }} production || true
           exit 1
+
+  notify-completion:
+    name: Notify Deployment Completion
+    runs-on: ubuntu-latest
+    needs: [notify-start, detect-changed-workers, deploy-production]
+    if: always()
+    steps:
+      - name: Determine deployment status
+        id: status
+        run: |
+          if [ "${{ needs.deploy-production.result }}" == "success" ]; then
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "emoji=✅" >> $GITHUB_OUTPUT
+            echo "message=Production deployment completed successfully!" >> $GITHUB_OUTPUT
+          elif [ "${{ needs.deploy-production.result }}" == "failure" ]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "emoji=❌" >> $GITHUB_OUTPUT
+            echo "message=Production deployment failed!" >> $GITHUB_OUTPUT
+          elif [ "${{ needs.deploy-production.result }}" == "cancelled" ]; then
+            echo "status=cancelled" >> $GITHUB_OUTPUT
+            echo "emoji=⚠️" >> $GITHUB_OUTPUT
+            echo "message=Production deployment was cancelled!" >> $GITHUB_OUTPUT
+          else
+            echo "status=skipped" >> $GITHUB_OUTPUT
+            echo "emoji=⏭️" >> $GITHUB_OUTPUT
+            echo "message=Production deployment was skipped (no changes detected)" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Send Slack notification
+        if: always()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          if [ -n "$SLACK_WEBHOOK_URL" ]; then
+            WORKERS="${{ needs.detect-changed-workers.outputs.workers }}"
+            WORKERS_COUNT=$(echo "$WORKERS" | grep -o ',' | wc -l | xargs)
+            WORKERS_COUNT=$((WORKERS_COUNT + 1))
+            
+            if [ "${{ needs.deploy-production.result }}" == "skipped" ] || [ -z "$WORKERS" ] || [ "$WORKERS" == "[]" ]; then
+              WORKERS_TEXT="No workers changed"
+            else
+              WORKERS_TEXT="$WORKERS_COUNT worker(s): $WORKERS"
+            fi
+            
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\":\"${{ steps.status.outputs.emoji }} *Production Deployment ${{ steps.status.outputs.status }}*\n\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Commit:* <https://github.com/${{ github.repository }}/commit/${{ github.sha }}|${GITHUB_SHA:0:7}>\n*Author:* ${{ github.actor }}\n*Workflow:* ${{ github.workflow }}\n*Run:* ${{ github.run_number }}\n*Workers:* $WORKERS_TEXT\n*Status:* ${{ steps.status.outputs.message }}\n\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow>\"}" \
+              "$SLACK_WEBHOOK_URL" || true
+          fi
 
