--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -5,6 +5,21 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
+  notify-start:
+    name: Notify Preview Deployment Start
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send Slack notification
+        if: always()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          if [ -n "$SLACK_WEBHOOK_URL" ]; then
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\":\"🔍 *Preview Deployment Started*\n\n*Repository:* ${{ github.repository }}\n*PR:* <${{ github.event.pull_request.html_url }}|#${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}>\n*Branch:* ${{ github.head_ref }}\n*Author:* ${{ github.actor }}\n*Workflow:* ${{ github.workflow }}\n*Run:* ${{ github.run_number }}\n\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow>\"}" \
+              "$SLACK_WEBHOOK_URL" || true
+          fi
+
   lint-and-test:
     name: Lint and Test
     runs-on: ubuntu-latest
@@ -122,4 +137,52 @@ jobs:
           echo "❌ Health check failed for ${{ matrix.worker }}, rolling back..."
           node scripts/rollback-worker.js ${{ matrix.worker }} preview || true
           exit 1
+
+  notify-completion:
+    name: Notify Preview Deployment Completion
+    runs-on: ubuntu-latest
+    needs: [notify-start, detect-changed-workers, deploy-preview]
+    if: always()
+    steps:
+      - name: Determine deployment status
+        id: status
+        run: |
+          if [ "${{ needs.deploy-preview.result }}" == "success" ]; then
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "emoji=✅" >> $GITHUB_OUTPUT
+            echo "message=Preview deployment completed successfully!" >> $GITHUB_OUTPUT
+          elif [ "${{ needs.deploy-preview.result }}" == "failure" ]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "emoji=❌" >> $GITHUB_OUTPUT
+            echo "message=Preview deployment failed!" >> $GITHUB_OUTPUT
+          elif [ "${{ needs.deploy-preview.result }}" == "cancelled" ]; then
+            echo "status=cancelled" >> $GITHUB_OUTPUT
+            echo "emoji=⚠️" >> $GITHUB_OUTPUT
+            echo "message=Preview deployment was cancelled!" >> $GITHUB_OUTPUT
+          else
+            echo "status=skipped" >> $GITHUB_OUTPUT
+            echo "emoji=⏭️" >> $GITHUB_OUTPUT
+            echo "message=Preview deployment was skipped (no changes detected)" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Send Slack notification
+        if: always()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          if [ -n "$SLACK_WEBHOOK_URL" ]; then
+            WORKERS="${{ needs.detect-changed-workers.outputs.workers }}"
+            WORKERS_COUNT=$(echo "$WORKERS" | grep -o ',' | wc -l | xargs)
+            WORKERS_COUNT=$((WORKERS_COUNT + 1))
+            
+            if [ "${{ needs.deploy-preview.result }}" == "skipped" ] || [ -z "$WORKERS" ] || [ "$WORKERS" == "[]" ]; then
+              WORKERS_TEXT="No workers changed"
+            else
+              WORKERS_TEXT="$WORKERS_COUNT worker(s): $WORKERS"
+            fi
+            
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\":\"${{ steps.status.outputs.emoji }} *Preview Deployment ${{ steps.status.outputs.status }}*\n\n*Repository:* ${{ github.repository }}\n*PR:* <${{ github.event.pull_request.html_url }}|#${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}>\n*Branch:* ${{ github.head_ref }}\n*Author:* ${{ github.actor }}\n*Workflow:* ${{ github.workflow }}\n*Run:* ${{ github.run_number }}\n*Workers:* $WORKERS_TEXT\n*Status:* ${{ steps.status.outputs.message }}\n\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Workflow>\"}" \
+              "$SLACK_WEBHOOK_URL" || true
+          fi
 
